# smallworld

./: Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: build.yml
libsmallworld/: Cargo.toml
libsmallworld/src/: lib.rs  openingtitle_filename_constants.rs  u8_fnt.rs  util.rs
smallworld/: Cargo.toml
smallworld/src/: main.rs
smallworld/tests/: test_cli.rs
